kubectl-getlogs.yml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: nodelogs
  labels:
    app: nodelogs
spec:
  selector:
    matchLabels:
      name: nodelogs
  template:
    metadata:
      labels:
        name: nodeLogs
    spec:
      hostPID: true
      hostNetwork: true
      nodeSelector:
        beta.kubernetes.io/os: linux
      containers:
        - name: nsenter
          image: mcr.microsoft.com/azure-policy/alpine:prod_20200505.1
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
          command:
            - nsenter
            - --target
            - "1"
            - --mount
            - --uts
            - --ipc
            - --net
            - --pid
            - --
            - sh
            - -c
            - |
              #! /bin/sh
              journalctl -u kubectl > /tmp/logs/kubectl.logs
              echo "Done"
          volumeMounts:
          - mountPath: /tmp/logs
            name: logs
      volumes:
      - name: logs
        hostPath: 
          path: /tmp/logs
