pod-on-systemNodePool.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  nodeName: aks-nodepool1-25301541-vmss000000
  containers:
  - image: nginx
    name: nginx
    resources: {}
  tolerations:
  - effect: NoSchedule
    key: node-role.kubernetes.io/master
  - key: CriticalAddonsOnly
    operator: Exists
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
